# jsonfetcher

./: .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
